@@ -20,9 +20,9 @@ enum {
 	GB_VIDEO_VERTICAL_TOTAL_PIXELS = 154,
 
 	// TODO: Figure out exact lengths
-	GB_VIDEO_MODE_2_LENGTH = 76,
-	GB_VIDEO_MODE_3_LENGTH_BASE = 171,
-	GB_VIDEO_MODE_0_LENGTH_BASE = 209,
+	GB_VIDEO_MODE_2_LENGTH = 80,
+	GB_VIDEO_MODE_3_LENGTH_BASE = 172,
+	GB_VIDEO_MODE_0_LENGTH_BASE = 204,
 
 	GB_VIDEO_HORIZONTAL_LENGTH = 456,
 
